--- a/Java/src/TelaPrincipal.fxml
+++ b/Java/src/TelaPrincipal.fxml
@@ -27,25 +27,20 @@
                         <AnchorPane layoutX="636.0" layoutY="11.0" prefHeight="436.0" prefWidth="207.0">
                            <children>
                               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2f0000" height="235.0" layoutX="-22.0" layoutY="234.0" stroke="BLACK" strokeType="INSIDE" width="232.0" />
-                              <RadioButton fx:id="rbPostAprovar" layoutX="14.0" layoutY="300.0" mnemonicParsing="false" text="APROVAR" textFill="#047900">
+                              <RadioButton fx:id="rbPostAprovar" layoutX="-16.0" layoutY="300.0" mnemonicParsing="false" text="APROVAR" textFill="#047900">
                                  <toggleGroup>
                                     <ToggleGroup fx:id="Aprovacao" />
                                  </toggleGroup>
                               </RadioButton>
-                              <RadioButton fx:id="rbPostBanir" layoutX="130.0" layoutY="300.0" mnemonicParsing="false" text="BANIR" textFill="#9e0000" toggleGroup="$Aprovacao" />
-                              <Label alignment="CENTER" layoutX="33.0" layoutY="250.0" prefHeight="35.0" prefWidth="142.0" text="APROVAÇÃO" textFill="WHITE">
+                              <RadioButton fx:id="rbPostBanir" layoutX="78.0" layoutY="275.0" mnemonicParsing="false" text="BANIR" textFill="#9e0000" toggleGroup="$Aprovacao" />
+                              <Label alignment="CENTER" layoutX="28.0" layoutY="240.0" prefHeight="35.0" prefWidth="142.0" text="APROVAÇÃO" textFill="WHITE">
                                  <font>
                                     <Font size="21.0" />
                                  </font>
                               </Label>
                               <Button fx:id="btnExecutarAvaliacaoPost" layoutX="62.0" layoutY="365.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="87.0" style="-fx-background-color: #000000;" text="EXECUTAR" />
-                              <Label fx:id="txtEstadoEscolhidoPost" layoutX="74.0" layoutY="326.0" text="ESTADO" textFill="WHITE">
-                              <RadioButton layoutX="106.0" layoutY="300.0" mnemonicParsing="false" text="REPROVADO" textFill="#9e0000" toggleGroup="$Aprovacao" />
-                              <Label layoutX="74.0" layoutY="326.0" text="ESTADO" textFill="WHITE">
-                                 <font>
-                                    <Font size="17.0" />
-                                 </font>
-                              </Label>
+                              <Label fx:id="txtEstadoEscolhidoPost" layoutX="74.0" layoutY="326.0" text="ESTADO" textFill="WHITE"> </Label>
+                              <RadioButton layoutX="91.0" layoutY="300.0" mnemonicParsing="false" text="REPROVADO" textFill="#9e0000" toggleGroup="$Aprovacao" />
                               <GridPane alignment="CENTER" gridLinesVisible="true" layoutX="-1.0" layoutY="115.0" prefHeight="108.0" prefWidth="200.0">
                                  <children>
                                     <Label alignment="CENTER" prefHeight="17.0" prefWidth="99.0" text="Nome do Autor" />
@@ -74,11 +69,6 @@
                                  </rowConstraints>
                               </GridPane>
                               <Pane fx:id="imgPostDenunciado" layoutX="19.0" layoutY="14.0" prefHeight="93.0" prefWidth="160.0" style="-fx-background-image: url('https://t3.gstatic.com/licensed-image?q=tbn:ANd9GcRoT6NNDUONDQmlthWrqIi_frTjsjQT4UZtsJsuxqxLiaFGNl5s3_pBIVxS6-VsFUP_'); -fx-background-size: 100%; -fx-background-repeat: no-repeat;" />
-                              <Label alignment="CENTER" layoutX="27.0" layoutY="247.0" prefHeight="35.0" prefWidth="142.0" text="APROVAÇÃO" textFill="WHITE">
-                                 <font>
-                                    <Font size="21.0" />
-                                 </font>
-                              </Label>
                            </children>
                         </AnchorPane>
                         <AnchorPane layoutX="-7.0" layoutY="246.0" prefHeight="427.0" prefWidth="242.0">
@@ -89,7 +79,7 @@
                                     <Cursor fx:constant="HAND" />
                                  </cursor>
                                  <image>
-                                    <Image url="@../../../Site%20(github)/Java/src/resources/setaEsquerda.png" />
+                                    <Image url="@resources/setaEsquerda.png" />
                                  </image>
                               </ImageView>
                               <ImageView fitHeight="34.0" fitWidth="35.0" layoutX="228.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true">
