--- a/Java/src/TelaPrincipal.fxml
+++ b/Java/src/TelaPrincipal.fxml
@@ -89,7 +89,7 @@
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a01111" height="447.0" layoutX="2.0" layoutY="2.0" stroke="BLACK" strokeType="INSIDE" width="497.0" />
                         <Button layoutX="531.0" layoutY="360.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="30.0" style="-fx-background-color: transparent;" />
                         <Button layoutX="641.0" layoutY="358.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="20.0" style="-fx-background-color: transparent;" />
-                        <Button fx:id="BtnDesativarUsuario" layoutX="17.0" layoutY="388.0" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 20%;" text="Desativar" textFill="RED">
+                        <Button fx:id="BtnDesativarUsuario" layoutX="15.0" layoutY="378.0" mnemonicParsing="false" onAction="#ActionDesativarUsuario" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 20%;" text="Desativar" textFill="RED">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -97,7 +97,7 @@
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
-                        <Button fx:id="BtnBanirUsuario" layoutX="117.0" layoutY="388.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="87.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 20%;" text="Banir" textFill="RED">
+                        <Button fx:id="BtnBanirUsuario" layoutX="108.0" layoutY="378.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="87.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 20%;" text="Banir" textFill="RED">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -110,21 +110,21 @@
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <TextArea fx:id="TxtAreaBioUsuario" layoutX="18.0" layoutY="136.0" prefHeight="110.0" prefWidth="464.0" style="-fx-background-color: black; -fx-wrap-text: true;" />
+                        <TextArea fx:id="TxtAreaBioUsuario" editable="false" layoutX="18.0" layoutY="136.0" prefHeight="110.0" prefWidth="464.0" style="-fx-background-color: black; -fx-wrap-text: true;" />
                         <Label fx:id="TxtUsernameUsuario" layoutX="119.0" layoutY="61.0" prefHeight="35.0" prefWidth="159.0" text="\@Username" textFill="WHITE">
                            <font>
                               <Font size="15.0" />
                            </font>
                         </Label>
-                        <Label fx:id="TxtDataCriacaoUsuario" layoutX="19.0" layoutY="104.0" prefHeight="23.0" prefWidth="75.0" text="10/10/2023" />
-                        <Label fx:id="TxtEmailUsuario" layoutX="326.0" layoutY="104.0" prefHeight="23.0" prefWidth="159.0" text="hsdofjsdoo@gmail.com" textAlignment="RIGHT" />
-                        <Label layoutX="14.0" layoutY="265.0" prefHeight="23.0" prefWidth="84.0" text="Pontos Totais:" />
-                        <Label layoutX="14.0" layoutY="300.0" prefHeight="23.0" prefWidth="75.0" text="Denuncias:" />
-                        <TextField fx:id="TxtFieldPontosUsuario" layoutX="98.0" layoutY="264.0" prefHeight="25.0" prefWidth="65.0" />
-                        <TextField fx:id="TxtFieldDenunciasUsuario" layoutX="98.0" layoutY="299.0" prefHeight="25.0" prefWidth="65.0" />
-                        <TextField fx:id="TxtFieldLinkUsuario" layoutX="99.0" layoutY="335.0" prefHeight="25.0" prefWidth="374.0" />
-                        <Label layoutX="15.0" layoutY="336.0" prefHeight="23.0" prefWidth="84.0" text="Link do User:" />
-                        <Button fx:id="BtnZerarDenunciasUsuario" layoutX="218.0" layoutY="388.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="141.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 20%;" text="Zerar Denuncias" textFill="#00ff09">
+                        <Label fx:id="TxtDataCriacaoUsuario" layoutX="19.0" layoutY="104.0" prefHeight="23.0" prefWidth="106.0" text="data Criação" textFill="WHITE" />
+                        <Label fx:id="TxtEmailUsuario" layoutX="326.0" layoutY="104.0" prefHeight="23.0" prefWidth="159.0" text="email" textAlignment="RIGHT" textFill="WHITE" />
+                        <Label layoutX="14.0" layoutY="265.0" prefHeight="23.0" prefWidth="102.0" text="Pontos Totais:" textFill="WHITE" />
+                        <Label layoutX="14.0" layoutY="300.0" prefHeight="23.0" prefWidth="91.0" text="Denuncias:" textFill="WHITE" />
+                        <TextField fx:id="TxtFieldPontosUsuario" editable="false" layoutX="119.0" layoutY="261.0" prefHeight="25.0" prefWidth="65.0" />
+                        <TextField fx:id="TxtFieldDenunciasUsuario" editable="false" layoutX="119.0" layoutY="297.0" prefHeight="25.0" prefWidth="65.0" />
+                        <TextField fx:id="TxtFieldLinkUsuario" editable="false" layoutX="119.0" layoutY="332.0" prefHeight="31.0" prefWidth="353.0" />
+                        <Label layoutX="15.0" layoutY="336.0" prefHeight="23.0" prefWidth="100.0" text="Link do User:" textFill="WHITE" />
+                        <Button fx:id="BtnZerarDenunciasUsuario" layoutX="199.0" layoutY="378.0" mnemonicParsing="false" onAction="#ActionZerarDenunciasUsuario" prefHeight="33.0" prefWidth="141.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 20%;" text="Zerar Denuncias" textFill="#00ff09">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -142,7 +142,7 @@
                               <Font name="System Bold Italic" size="15.0" />
                            </font>
                         </Label>
-                        <TextArea fx:id="TxtAreaConteudoPostUsuario" layoutX="515.0" layoutY="239.0" prefHeight="184.0" prefWidth="311.0" text="&#10;" wrapText="true" />
+                        <TextArea fx:id="TxtAreaConteudoPostUsuario" layoutX="515.0" layoutY="220.0" prefHeight="184.0" prefWidth="311.0" text="&#10;" wrapText="true" />
                         <Pane fx:id="ImgFotoUsuario" layoutX="24.0" layoutY="23.0" prefHeight="76.0" prefWidth="76.0" style="-fx-border-color: white; -fx-border-radius: 100%;" />
                         <Button fx:id="BtnSetaEUsuario" layoutX="401.0" layoutY="377.0" mnemonicParsing="false" onAction="#ActionRetornarUsuario" style="-fx-background-color: transparent;">
                            <graphic>
@@ -189,17 +189,17 @@
                            </font>
                         </Text>
                         <TextField fx:id="TxtFieldIdTopicos" layoutX="753.0" layoutY="48.0" onKeyTyped="#ActionOnWriteTopicosId" prefHeight="25.0" prefWidth="65.0" promptText="ID" />
-                        <TextField fx:id="TxtFieldNomeTopicos" layoutX="446.0" layoutY="48.0" prefHeight="25.0" prefWidth="292.0" text="Nome" />
+                        <TextField fx:id="TxtFieldNomeTopicos" editable="false" layoutX="446.0" layoutY="48.0" prefHeight="25.0" prefWidth="292.0" text="Nome" />
                         <Text layoutX="436.0" layoutY="407.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*Id = 0 =&gt; criar tópico">
                            <font>
                               <Font name="System Italic" size="12.0" />
                            </font>
                         </Text>
-                        <Button fx:id="BtnModificarTopico" layoutX="655.0" layoutY="84.0" mnemonicParsing="false" onAction="#ActionCriarEditarTopico" text="Criar / Editar">
+                        <Button fx:id="BtnModificarTopico" layoutX="649.0" layoutY="94.0" mnemonicParsing="false" onAction="#ActionCriarEditarTopico" text="Criar / Editar">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor></Button>
-                        <Button fx:id="BtnExcluirTopico" layoutX="759.0" layoutY="84.0" mnemonicParsing="false" onAction="#ActionExcluirTopico" text="Excluir" textFill="RED">
+                        <Button fx:id="BtnExcluirTopico" layoutX="759.0" layoutY="97.0" mnemonicParsing="false" onAction="#ActionExcluirTopico" text="Excluir" textFill="RED">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
