--- a/Java/src/TelaPrincipal.fxml
+++ b/Java/src/TelaPrincipal.fxml
@@ -97,7 +97,7 @@
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
-                        <Button fx:id="BtnBanirUsuario" layoutX="108.0" layoutY="378.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="87.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 20%;" text="Banir" textFill="RED">
+                        <Button fx:id="BtnBanirUsuario" layoutX="108.0" layoutY="378.0" mnemonicParsing="false" onAction="#ActionBanirUsuario" prefHeight="33.0" prefWidth="87.0" style="-fx-background-color: transparent; -fx-border-color: white; -fx-border-radius: 20%;" text="Banir" textFill="RED">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
@@ -117,7 +117,7 @@
                            </font>
                         </Label>
                         <Label fx:id="TxtDataCriacaoUsuario" layoutX="19.0" layoutY="104.0" prefHeight="23.0" prefWidth="106.0" text="data Criação" textFill="WHITE" />
-                        <Label fx:id="TxtEmailUsuario" layoutX="326.0" layoutY="104.0" prefHeight="23.0" prefWidth="159.0" text="email" textAlignment="RIGHT" textFill="WHITE" />
+                        <Label fx:id="TxtEmailUsuario" layoutX="278.0" layoutY="104.0" prefHeight="23.0" prefWidth="202.0" text="email" textAlignment="RIGHT" textFill="WHITE" />
                         <Label layoutX="14.0" layoutY="265.0" prefHeight="23.0" prefWidth="102.0" text="Pontos Totais:" textFill="WHITE" />
                         <Label layoutX="14.0" layoutY="300.0" prefHeight="23.0" prefWidth="91.0" text="Denuncias:" textFill="WHITE" />
                         <TextField fx:id="TxtFieldPontosUsuario" editable="false" layoutX="119.0" layoutY="261.0" prefHeight="25.0" prefWidth="65.0" />
@@ -189,7 +189,7 @@
                            </font>
                         </Text>
                         <TextField fx:id="TxtFieldIdTopicos" layoutX="753.0" layoutY="48.0" onKeyTyped="#ActionOnWriteTopicosId" prefHeight="25.0" prefWidth="65.0" promptText="ID" />
-                        <TextField fx:id="TxtFieldNomeTopicos" editable="false" layoutX="446.0" layoutY="48.0" prefHeight="25.0" prefWidth="292.0" text="Nome" />
+                        <TextField fx:id="TxtFieldNomeTopicos" layoutX="446.0" layoutY="48.0" prefHeight="25.0" prefWidth="292.0" text="Nome" />
                         <Text layoutX="436.0" layoutY="407.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*Id = 0 =&gt; criar tópico">
                            <font>
                               <Font name="System Italic" size="12.0" />
