--- a/Java/src/TelaPrincipal.fxml
+++ b/Java/src/TelaPrincipal.fxml
@@ -26,7 +26,7 @@
                      <children>
                         <AnchorPane layoutX="-7.0" layoutY="246.0" prefHeight="427.0" prefWidth="242.0">
                            <children>
-                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a01111" height="432.0" layoutY="-244.0" stroke="BLACK" strokeType="INSIDE" width="500.0" />
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#a01111" height="432.0" layoutX="9.0" layoutY="-244.0" stroke="BLACK" strokeType="INSIDE" width="845.0" />
                               <ImageView fitHeight="24.0" fitWidth="32.0" layoutX="416.0" layoutY="406.0" pickOnBounds="true" preserveRatio="true">
                                  <cursor>
                                     <Cursor fx:constant="HAND" />
@@ -35,47 +35,75 @@
                                     <Image url="@resources/setaEsquerda.png" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="ImgSetaDPost" fitHeight="34.0" fitWidth="35.0" layoutX="447.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
+                              <ImageView fx:id="ImgSetaDPost" fitHeight="34.0" fitWidth="35.0" layoutX="725.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
                                  <image>
                                     <Image url="@resources/seta.png" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="ImgSetaEPost" fitHeight="34.0" fitWidth="35.0" layoutX="385.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
+                              <ImageView fx:id="ImgSetaEPost" fitHeight="34.0" fitWidth="35.0" layoutX="677.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
                                  <image>
                                     <Image url="@resources/setaEsquerda.png" />
                                  </image>
                               </ImageView>
-                              <Button fx:id="BtnExcluirPost" layoutX="189.0" layoutY="141.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="120.0" style="-fx-background-color: transparent; -fx-border-radius: 20%; -fx-border-color: white;" text="Excluir Post" textFill="RED">
+                              <Button fx:id="BtnExcluirPost" layoutX="595.0" layoutY="37.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="94.0" style="-fx-background-color: transparent; -fx-border-radius: 20%; -fx-border-color: white;" text="Excluir Post" textFill="RED">
                                  <font>
-                                    <Font name="System Bold" size="15.0" />
-                                 </font></Button>
-                              <Button fx:id="BtnZerarDenunciasPost" layoutX="318.0" layoutY="141.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="163.0" style="-fx-background-color: transparent; -fx-border-radius: 20%; -fx-border-color: white;" text="Zerar Denuncias" textFill="#02ff00">
-                                 <font>
-                                    <Font name="System Bold" size="15.0" />
+                                    <Font name="System Bold" size="13.0" />
                                  </font>
                               </Button>
-                              <Text fx:id="TxtTituloPostPost" fill="WHITE" layoutX="228.0" layoutY="-217.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Titulo">
+                              <Button fx:id="BtnZerarDenunciasPost" layoutX="694.0" layoutY="37.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="145.0" style="-fx-background-color: transparent; -fx-border-radius: 20%; -fx-border-color: white;" text="Zerar Denuncias" textFill="#02ff00">
                                  <font>
-                                    <Font name="System Bold" size="15.0" />
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Button>
+                              <Text fx:id="TxtTituloPostPost" fill="WHITE" layoutX="276.0" layoutY="-214.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Titulo">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
                                  </font>
                               </Text>
-                              <Text fx:id="TxtUsernamePost" fill="WHITE" layoutX="278.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="\@Username">
+                              <Text fx:id="TxtUsernamePost" fill="WHITE" layoutX="673.0" layoutY="-33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="\@Username">
                                  <font>
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </Text>
-                              <Text fx:id="TxtPostPost" fill="WHITE" layoutX="278.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Id Post">
+                              <Text fx:id="TxtPostPost" fill="WHITE" layoutX="738.0" layoutY="101.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Id Post">
                                  <font>
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </Text>
-                              <Button fx:id="BtnDenunciarUsuarioPost" layoutX="18.0" layoutY="141.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="158.0" style="-fx-background-color: transparent; -fx-border-radius: 20%; -fx-border-color: white;" text="Denunciar Usuário" textFill="RED">
+                              <Button fx:id="BtnDenunciarUsuarioPost" layoutX="639.0" layoutY="-16.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="152.0" style="-fx-background-color: transparent; -fx-border-radius: 20%; -fx-border-color: white;" text="Denunciar Usuário" textFill="RED">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Button>
+                              <TextArea fx:id="TxtAreaConteudoPost" editable="false" layoutX="75.0" layoutY="-204.0" prefHeight="321.0" prefWidth="469.0" style="-fx-wrap-text: true;" />
+                              <Pane fx:id="ImgCapaPost" layoutX="646.0" layoutY="-204.0" prefHeight="119.0" prefWidth="135.0" style="-fx-background-color: white;" />
+                              <Separator layoutX="581.0" layoutY="-234.0" orientation="VERTICAL" prefHeight="409.0" prefWidth="1.0" />
+                              <Label layoutX="646.0" layoutY="-234.0" text="IMAGEM DO POST" textFill="WHITE">
                                  <font>
                                     <Font name="System Bold" size="15.0" />
                                  </font>
-                              </Button>
-                              <TextArea fx:id="TxtAreaConteudoPost" editable="false" layoutX="17.0" layoutY="-195.0" prefHeight="321.0" prefWidth="250.0" style="-fx-wrap-text: true;" />
-                              <Pane fx:id="ImgCapaPost" layoutX="285.0" layoutY="-195.0" prefHeight="200.0" prefWidth="200.0" />
+                              </Label>
+                              <Label layoutX="647.0" layoutY="86.0" text="ID DO POST: " textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="599.0" layoutY="-48.0" text="Username:" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="599.0" layoutY="-71.0" text="Número de denúncias:" textFill="WHITE">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                              <Separator layoutX="594.0" layoutY="18.0" prefHeight="17.0" prefWidth="242.0" />
+                              <Text fx:id="txtNDenunciasPost" fill="WHITE" layoutX="754.0" layoutY="-56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="n denúncias">
+                                 <font>
+                                    <Font name="System Bold" size="14.0" />
+                                 </font>
+                              </Text>
                            </children>
                         </AnchorPane>
                      </children>
